# gbnf-compiler

./: .gitignore  LICENSE  Makefile  ReadMe.MD  pyproject.toml
examples/: item_list.py  point_form.py  tool_selection.py
gbnf_compiler/: __init__.py  compiler.py  rules.py  sentence.py
tests/: test_compiler.py
